--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="crickters.html">Cricket</a>
+    <a href="crickters.html">Cricket</a> <br>
     <a href="form-chapters.html"> form</a>
 </body>
 </html>
