--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
    
    
-    <a href="form-chapters.html"> form</a>
+    <a href="layout2.html"> layout1</a><br>
+    <a href="layuot3.html"> layuot2</a><br>
+    <a href="table--.html"> layuot3</a><br>
 </body>
 </html>
