--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ border-radius: 50%;
 <body>
    
    
-    <a href="layout2.html"> <h3>layout1</h3></a><br>
-    <a href="layuot3.html"> layuot2</a><br>
-    <a href="table--.html"> layuot3</a><br>
-    <a href="flex6.html"><h1>Chess made by Prithvi</h1></a>
+    <a href="layout2.html"> layout1</a><br><br>
+    <a href="layuot3.html"> layuot2</a><br><br>
+    <a href="table--.html"> layuot3</a><br><br>
+    <a href="flex6.html">Chess made by Prithvi</Chess></a>
 </body>
 </html>
