--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@ border-radius: 50%;
     <a href="layout2.html"> layout1</a><br><br>
     <a href="layuot3.html"> layuot2</a><br><br>
     <a href="table--.html"> layuot3</a><br><br>
-    <a href="flex6.html">Chess made by Prithvi</Chess></a>
+    <a href="flex6.html">Chess made by Prithvi</a>
 </body>
 </html>
